samo da proverim da li sam ubo granu

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <!--Boju pozadine sam stavila samo da vidite kako izgleda, ubacite u css-->
-<body style="background-color: #252525">
+<body>
     <!--Glavni div za celu stranu-->
     <div>
         <!--Heder-->
