--- a/jelovnik.html
+++ b/jelovnik.html
@@ -38,19 +38,19 @@
 
                     <ul class="navbar-nav nav-fill w-100">
                         <li class="nav-item active">
-                            <a class="nav-link " href="#reservation">REZERVACIJA</a>
+                            <a class="nav-link " href="#">REZERVACIJA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link " href="index.html#aboutus">O NAMA</a>
+                            <a class="nav-link " href="#">O NAMA</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link logoo" href="index.html"><img id="logo" src="images/logo150.png" alt="logo"></a>
+                            <a class="nav-link logoo" href="#"><img id="logo" src="images/logo150.png" alt="logo"></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">JELOVNIK</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link  " href="#contact">KONTAKT</a>
+                            <a class="nav-link  " href="#">KONTAKT</a>
                         </li>
                     </ul>
                     </div>
@@ -306,7 +306,7 @@
             <!--Rezervacija-->
             <div>
                 <img src="">Slika stolova
-                <button id="reservation">Rezervisite</button>
+                <button>Rezervisite</button>
             </div>
         </div>
         <!--Prelaz-->
@@ -318,7 +318,7 @@
         </div>
         <!--Kontakt-->
         <div>
-            <div><p id="contact">Adresa, mesto, kontakt telefon</p></div>
+            <div><p>Adresa, mesto, kontakt telefon</p></div>
             <div></div>
         </div>
         <!--FOOTER-->
