--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@
 
 
 <!--Dugme za vracanje na vrh stranice-->
-<button class="btn btn-danger alert-light btn-sm ml-2 fa fa-angle-up" onclick="topFunction()" id="myBtn" title="Go to top">&#x21E7</button>
+<button class="btn btn-outline-danger btn-sm ml-2 fa fa-angle-up" onclick="topFunction()" id="myBtn" title="Go to top">&#x21E7</button>
 
 <script>
 window.onscroll = function() {scrollFunction()};
