--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="#"><img id="logo" src="slike/logo100.png" alt="logo"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="jelovnik.html">jelovnik</a>
+                        <a class="nav-link" href="#">jelovnik</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link  " href="#">kontakt</a>
