--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <!--Izmenila sam ikonicu-Verica-->
     <link rel="icon" href="slike/logo100.png">
     <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="shortcut icon" href="../favicon.ico">
     <link href='http://fonts.googleapis.com/css?family=Raleway:300,500|Arvo:700' rel='stylesheet' type='text/css'>
@@ -14,13 +16,11 @@
     <link rel="stylesheet" type="text/css" href="css/style1.css" />
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Amiri" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Abril+Fatface|Amiri" rel="stylesheet">
-</head>
-<body>
-    <!--Glavni div za celu stranu-->
-  <div class="container-fluid">
-    <!--Heder-->
-        <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white fixed-top ">
-            <div class="container-fluid">
+  </head>
+  <body>
+    <!--header-->
+      <nav class="navbar navbar-expand-lg navbar-expand-md navbar-light bg-white fixed-top ">
+            <div class="container-fluid p-0">
                 <a class="navbar-brand" href="#" hidden></a>
                 <button class="navbar-toggler " type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -29,19 +29,19 @@
                 <div class="collapse navbar-collapse text-center" id="navbarNav">
                 <ul class="navbar-nav nav-fill w-100">
                     <li class="nav-item active">
-                        <a class="nav-link " href="#">rezervacija</a>
+                        <a class="nav-link " href="#reservation">REZERVACIJA</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#">o nama</a>
+                        <a class="nav-link " href="#aboutus">O NAMA</a>
                     </li>
                     <li class="nav-item d-sm-none d-none d-md-block d-lg-block">
                         <a class="nav-link" href="#"><img id="logo" src="slike/logo100.png" alt="logo"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">jelovnik</a>
+                        <a class="nav-link" href="#jelovnik">JELOVNIK</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  " href="#">kontakt</a>
+                        <a class="nav-link  " href="#contact">KONTAKT</a>
                     </li>
                  </ul>
                 </div>
@@ -51,27 +51,27 @@
         <!-- HOME SEKCIJA -->
         <div class="home">
             <img class="first col-sm-12"src="slike/pozadina3.png">
-            <img class="plate d-none d-md-none d-lg-block" src="slike/plate.png" width="340">
-            <img class="wine d-none d-md-none d-lg-block"src="slike/wine.png" width="240">
+            <img id="up" class="plate d-none d-md-none d-lg-block" src="slike/plate.png" alt="plate" width="340">
+            <img class="wine d-none d-md-none d-lg-block"src="slike/wine.png" alt="wine" width="240">
             <div class="text">
-              <h3>Neki naslov</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deleniti nam odit at numquam quia cupiditate, eos fugiat est ad officia.</p>
-              <button type="button" class="btn btn-outline-warning rounded-pill">REZERVISITE</button>
+                <center><h3>Rezervisite na vreme</h3>
+                  <p>..i svratite na frustuk, jauznu, <br> ili pak, na forspajs, rinflajs i cuspajs</p>
+                  <button type="button" class="btn btn-outline-warning rounded-pill">REZERVISITE</button>
             </div>
         </div>
         <div class="clearfix">
 
         </div>
 
-    <div class="container-fluid">
+    <div class="container-fluid p-0">
         <!--Stranica o nama-->
         <!--Ovde treba u css da se sredi, ja sam ovako nesto mislila, naravno stilizovanije-->
       <div class="aboutUs  text-center" >
         <div class="aboutText m-auto col-sm-12 col-lg-6 text-center">
-          <h3 class="text-center">Potraga za savršenstvom</h3>
+          <h3 class="text-center" id="aboutus">Potraga za savršenstvom</h3>
           <center><hr style="background-color:#edc29e;height:1px; width:40%;"/></center>
           <p>Da, to je ono što mi svakodnevno radimo.<br>
-          Želimo da svaki zalogaj bude savršen, da nas po tome upamtite. Da od svakog jela stvorimo umetnost. Želimo da vreme koje provedete u obedovanju ne bude puka potreba, već da osetimo punu uzvišenost svakog sastojka naših jela. Budite naši gosti, mi ćemo biti vaši prijatelji. Malo vise o samom pocetku, restoran Sharage je nastao 2019. godine u srcu <a href="http://www.zrenjanin.rs/">Zrenjanina</a> saradnjom cetiri prijateljska buntovnika "iz sharaga". Aposlutni buntovnici u svemu resili su da se oprobaju i u buntu protiv tradicionalnog, a opet i protiv modernog, kako u ambijentu, tako i u ukusima nase hrane, naizgled nespojivo, a opet tako savrseno i jedinstveno. Dodjite i uverite se sami.</p>
+          Želimo da svaki zalogaj bude savršen, da nas po tome upamtite. Da od svakog jela stvorimo umetnost. Želimo da vreme koje provedete u obedovanju ne bude puka potreba, već da osetimo punu uzvišenost svakog sastojka naših jela. Budite naši gosti, mi ćemo biti vaši prijatelji. Malo vise o samom pocetku, restoran Sharage je nastao 2019. godine u srcu <a href="http://www.zrenjanin.rs/" target="_blank">Zrenjanina</a> saradnjom pet prijateljskih buntovnika "iz sharaga". Aposlutni buntovnici u svemu resili su da se oprobaju i u buntu protiv tradicionalnog, a opet i protiv modernog, kako u ambijentu, tako i u ukusima nase hrane, naizgled nespojivo, a opet tako savrseno i jedinstveno. Dodjite i uverite se sami.</p>
           <center><hr style="background-color:#edc29e;height:1px; width:40%;"/></center>
           <!--Proverite tekst-->
           <!--Dodati slike ambijenta-->
@@ -90,13 +90,13 @@
           <!-- The slideshow -->
           <div class="carousel-inner row">
             <div class="carousel-item active">
-              <img class="img-fluid rounded mx-auto d-block" src="images/13.jpg" alt="prvi" width="500" height="250">
+              <img class="img-fluid rounded mx-auto d-block" src="slike/restaurant.jpg" alt="restaurant" width="500" height="250">
             </div>
             <div class="carousel-item">
-              <img class="img-fluid rounded mx-auto d-block" src="images/13.jpg" alt="drugi" width="500" height="250">
+              <img class="img-fluid rounded mx-auto d-block" src="slike/restaurant1.jpg" alt="restaurant" width="500" height="250">
             </div>
             <div class="carousel-item">
-              <img class="img-fluid rounded mx-auto d-block" src="images/13.jpg" alt="treci" width="500" height="250">
+              <img class="img-fluid rounded mx-auto d-block" src="slike/tables.jpg" alt="table" width="500" height="250">
             </div>
           </div>
           
@@ -124,21 +124,21 @@
         <!--Prelaz sa strane na stranu-->
         <!--kraj stranice o nama-->
         <div class="reservation">
-            <p>par reci opet o restoranu</p>
+            <p>"Vrlo prijatan ambijent, <br/> moderan, a mozete uzivati i <br/> u modernoj i tradicionalnoj kuhinji,<br/> osoblje je za svaku pohvalu, <br/> od konobara, preko kuvara, do poslasticara"<br/> Dusan I.</p>
             <!--REZERVACIJA KONTAKT-->
             <div>
-                <img src="">Slika stolova
+                <img id="reservation" src="">Slika stolova
                 <button type="button" class="btn btn-outline-warning rounded-pill mb-2 mb-5 ">REZERVISITE</button>
             </div>
         </div>
         <!--Prelaz-->
         <div>
-            <p>Bla bla o restoranu</p>
+            <p>"Kad god dodjem do Zrenjanina <br/>obavezno posetim ovaj restoran, <br/> mislim da takav ambijent i kuhinja <br/>ne postoje nigde" <br/>Jovana A. </p>
         </div>
 
         <!-- JELOVNIK SEKCIJA -->
-        <div class="jelovnik">
-          <section class="main">
+        <div  class="jelovnik">
+          <section id="jelovnik" class="main">
 
             <div id="rm-container" class="rm-container">
 
@@ -154,7 +154,7 @@
                       <div class="rm-info">
                         <p>
                         <strong>Restoran Sharage</strong><br>
-                        Dr. Kornela Radulovića 18<br>
+                        Dr Kornela Radulovića 18<br>
                         Zrenjanin, Srbija<br>
                         <strong>Telefon</strong> 062/530-525<br>
                         <strong>Fax</strong> 023/510-004</p>
@@ -293,10 +293,24 @@
           </script>
 
         <!--KONTAKT SEKCIJA-->
-        <div class="contact">
-            <div><p>Adresa, mesto, kontakt telefon</p></div>
+        <div id="contact" class="contact">
+              <p><b>Restoran Sharage</b><br/>
+                 Dr Kornela Radulovića 18<br/>
+                Zrenjanin, Srbija<br/>
+                  <b>Telefon:</b> 062/530-525<br/>
+                  <b>Fax:</b> 023/510-004<br/>
+                <b>Radno vreme:</b><br/>Pon-Cet 09-01h<br/>Pet-Ned 09-03h
+
+              </p>
+            </div>
             <div></div>
         </div>
+    </div>
+    <div class="social">
+        <a href="#" class="icon"><i class="fab fa-instagram"></i></a>
+        <a href="#" class="icon"><i class="fab fa-facebook-f"></i></a>
+        <a href="#" class="icon"><i class="fab fa-twitter"></i></a>
+        <a href="mailto:restoransharage@gmail.com" class="icon"><i class="far fa-envelope"></i></a>
     </div>
         <!--FOOTER-->
         <footer class="row align-middle" >
@@ -309,7 +323,7 @@
             <div class="col-sm-4 col-12">
                 <iframe class="card-img-top" src=" " frameborder="1"></iframe>
             </div>
-                <p class="text-center col-12">2019.&copy;<a href="#">Restoran Sharage</a></p>
+                <p class="text-center col-12">2019.&copy;<a href="#up">Restoran Sharage</a></p>
         </footer>
     </div>
 
