--- a/index.html
+++ b/index.html
@@ -29,19 +29,19 @@
                 <div class="collapse navbar-collapse text-center" id="navbarNav">
                 <ul class="navbar-nav nav-fill w-100">
                     <li class="nav-item active">
-                        <a class="nav-link " href="#reservation">REZERVACIJA</a>
+                        <a class="nav-link " href="#reservation">Rezervacija</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link " href="#aboutus">O NAMA</a>
+                        <a class="nav-link " href="#aboutus">O nama</a>
                     </li>
                     <li class="nav-item d-sm-none d-none d-md-block d-lg-block">
-                        <a class="nav-link" href="#"><img id="logo" src="slike/logo100.png" alt="logo"></a>
+                        <a class="nav-link" href="index.html"><img id="logo" src="slike/logo100.png" alt="logo"></a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#jelovnik">JELOVNIK</a>
+                        <a class="nav-link" href="#jelovnik">Jelovnik</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link  " href="#contact">KONTAKT</a>
+                        <a class="nav-link  " href="#contact">Kontakt</a>
                     </li>
                  </ul>
                 </div>
@@ -76,58 +76,45 @@
           <!--Proverite tekst-->
           <!--Dodati slike ambijenta-->
         </div> <br>
-
-        <!--myCarousel-->
-        <div class="slajdovi">
-          <div id="demo" class="carousel slide container-fluid" data-ride="carousel">
-
-             <!-- Indicators -->
-             <ul class="carousel-indicators">
-               <li data-target="#demo" data-slide-to="0" class="active"></li>
-               <li data-target="#demo" data-slide-to="1"></li>
-               <li data-target="#demo" data-slide-to="2"></li>
-             </ul>
-
-             <!-- The slideshow -->
-             <div class="carousel-inner row">
-               <div class="carousel-item active">
-                 <img class="img-fluid rounded mx-auto d-block" src="slike/restaurant.jpg" alt="restaurant" width="500" height="250">
-               </div>
-               <div class="carousel-item">
-                 <img class="img-fluid rounded mx-auto d-block" src="slike/restaurant1.jpg" alt="restaurant" width="500" height="250">
-               </div>
-               <div class="carousel-item">
-                 <img class="img-fluid rounded mx-auto d-block" src="slike/tables.jpg" alt="table" width="500" height="250">
-               </div>
-             </div>
-
-             <!-- Left and right controls -->
-             <a class="carousel-control-prev " href="#demo" data-slide="prev">
-               <span class="carousel-control-prev-icon "></span>
-             </a>
-             <a class="carousel-control-next " href="#demo" data-slide="next">
-               <span class="carousel-control-next-icon"></span>
-             </a>
-           </div>
-           <!--kraj slajdova-->
-
-
-             <span class="row justify-content-center pb-2">
-             <button type="button" class="btn btn-outline-warning rounded-pill">REZERVISITE</button>
-             </span>
-
-        </div>
-
       </div>
-
-        <!--Slike ponuda dana ili ambijent-->
-
-
-
+      <!--myCarousel-->
+      <div class="slajdovi">
+        <div id="demo" class="carousel slide container-fluid" data-ride="carousel">
+           <!-- Indicators -->
+           <ul class="carousel-indicators">
+             <li data-target="#demo" data-slide-to="0" class="active"></li>
+             <li data-target="#demo" data-slide-to="1"></li>
+             <li data-target="#demo" data-slide-to="2"></li>
+           </ul>
+           <!-- The slideshow -->
+           <div class="carousel-inner row">
+             <div class="carousel-item active">
+               <img class="img-fluid rounded mx-auto d-block" src="slike/restaurant.jpg" alt="restaurant" width="500" height="250">
+             </div>
+             <div class="carousel-item">
+               <img class="img-fluid rounded mx-auto d-block" src="slike/restaurant1.jpg" alt="restaurant" width="500" height="250">
+             </div>
+             <div class="carousel-item">
+               <img class="img-fluid rounded mx-auto d-block" src="slike/tables.jpg" alt="table" width="500" height="250">
+             </div>
+           </div>
+           <!-- Left and right controls -->
+           <a class="carousel-control-prev " href="#demo" data-slide="prev">
+             <span class="carousel-control-prev-icon "></span>
+           </a>
+           <a class="carousel-control-next " href="#demo" data-slide="next">
+             <span class="carousel-control-next-icon"></span>
+           </a>
+         </div>
+         <!--kraj slajdova-->
+           <span class="row justify-content-center pb-2 carouselbtn">
+           <button type="button" class="btn btn-outline-warning rounded-pill">REZERVISITE</button>
+           </span>
+      </div>
         <!--Prelaz sa strane na stranu-->
         <!--kraj stranice o nama-->
+        <p class="comment col-6 ml-auto text-justify">"Vrlo prijatan ambijent, moderan, a mozete uzivati i u modernoj i tradicionalnoj kuhinji, osoblje je za svaku pohvalu,  od konobara, preko kuvara, do poslasticara"</p>
         <div class="reservation">
-            <p>"Vrlo prijatan ambijent, <br/> moderan, a mozete uzivati i <br/> u modernoj i tradicionalnoj kuhinji,<br/> osoblje je za svaku pohvalu, <br/> od konobara, preko kuvara, do poslasticara"<br/> Dusan I.</p>
             <!--REZERVACIJA KONTAKT-->
             <div>
                 <img id="reservation" src="">Slika stolova
@@ -136,7 +123,7 @@
         </div>
         <!--Prelaz-->
         <div>
-            <p>"Kad god dodjem do Zrenjanina <br/>obavezno posetim ovaj restoran, <br/> mislim da takav ambijent i kuhinja <br/>ne postoje nigde" <br/>Jovana A. </p>
+            <p class="comment col-6 mr-auto text-justify">"Kad god dodjem do Zrenjanina obavezno posetim ovaj restoran,  mislim da takav ambijent i kuhinja ne postoje nigde" </p>
         </div>
 
         <!-- JELOVNIK SEKCIJA -->
