reseno dugme vrh

--- a/index.html
+++ b/index.html
@@ -319,7 +319,7 @@
 
 
 <!--Dugme za vracanje na vrh stranice-->
-<button class="btn btn-outline-danger btn-sm ml-2 fa fa-angle-up" onclick="topFunction()" id="myBtn" title="Go to top">&#x21E7</button>
+<button class="btn btn-outline-danger btn-sm ml-2" onclick="topFunction()" id="myBtn" title="Go to top">&#8679</button>
 
 <script>
 window.onscroll = function() {scrollFunction()};
