--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-
+    <meta name="keywords" content="restoran, Zrenjanina, kuhinja, ambijent, tradicionalnoj, modernoj, REZERVIŠITE">
+    <meta name="description" content="restoran">
+    <meta name="author" content="Goran Malenić, Verica Milatović, Filip Jungić, Monika Čeke">
+    <title>Restoran Sharage</title>
     <!--Izmenila sam ikonicu-Verica-->
     <link rel="icon" href="slike/logo100.png">
     <!-- Bootstrap CSS -->
@@ -54,9 +57,9 @@
             <img id="up" class="plate d-none d-md-none d-lg-block" src="slike/plate.png" alt="plate" width="340">
             <img class="wine d-none d-md-none d-lg-block"src="slike/wine.png" alt="wine" width="240">
             <div class="text">
-                <center><h3>Rezervisite na vreme</h3>
-                  <p>..i svratite na frustuk, jauznu, <br> ili pak, na forspajs, rinflajs i cuspajs</p>
-                  <button type="button" class="btn btn-outline-warning rounded-pill">REZERVISITE</button>
+                <center><h3>Rezervišite na vreme</h3>
+                  <p>..i svratite na fruštuk, jauznu, <br> ili pak, na foršpajs, rinflajš i čušpajs</p>
+                  <button type="button" class="btn btn-outline-warning rounded-pill">REZERVIŠITE</button>
             </div>
         </div>
         <div class="clearfix">
@@ -71,7 +74,7 @@
           <h3 class="text-center" id="aboutus">Potraga za savršenstvom</h3>
           <center><hr style="background-color:#edc29e;height:1px; width:40%;"/></center>
           <p>Da, to je ono što mi svakodnevno radimo.<br>
-          Želimo da svaki zalogaj bude savršen, da nas po tome upamtite. Da od svakog jela stvorimo umetnost. Želimo da vreme koje provedete u obedovanju ne bude puka potreba, već da osetimo punu uzvišenost svakog sastojka naših jela. Budite naši gosti, mi ćemo biti vaši prijatelji. Malo vise o samom pocetku, restoran Sharage je nastao 2019. godine u srcu <a href="http://www.zrenjanin.rs/" target="_blank">Zrenjanina</a> saradnjom pet prijateljskih buntovnika "iz sharaga". Aposlutni buntovnici u svemu resili su da se oprobaju i u buntu protiv tradicionalnog, a opet i protiv modernog, kako u ambijentu, tako i u ukusima nase hrane, naizgled nespojivo, a opet tako savrseno i jedinstveno. Dodjite i uverite se sami.</p>
+          Želimo da svaki zalogaj bude savršen, da nas po tome upamtite. Da od svakog jela stvorimo umetnost. Želimo da vreme koje provedete u obedovanju ne bude puka potreba, već da osetimo punu uzvišenost svakog sastojka naših jela. Budite naši gosti, mi ćemo biti vaši prijatelji. Malo više o samom početku, restoran Sharage je nastao 2019. godine u srcu <a href="http://www.zrenjanin.rs/" target="_blank">Zrenjanina</a> saradnjom pet prijateljskih buntovnika "iz sharaga". Aposlutni buntovnici u svemu rešili su da se oprobaju i u buntu protiv tradicionalnog, a opet i protiv modernog, kako u ambijentu, tako i u ukusima naše hrane, naizgled nespojivo, a opet tako savršeno i jedinstveno. Dođite i uverite se sami.</p>
           <center><hr style="background-color:#edc29e;height:1px; width:40%;"/></center>
           <!--Proverite tekst-->
           <!--Dodati slike ambijenta-->
@@ -108,22 +111,22 @@
          </div>
          <!--kraj slajdova-->
            <span class="row justify-content-center pb-2 carouselbtn">
-           <button type="button" class="btn btn-outline-warning rounded-pill">REZERVISITE</button>
+           <button type="button" class="btn btn-outline-warning rounded-pill">REZERVIŠITE</button>
            </span>
       </div>
         <!--Prelaz sa strane na stranu-->
         <!--kraj stranice o nama-->
-        <p class="comment col-6 ml-auto text-justify">"Vrlo prijatan ambijent, moderan, a mozete uzivati i u modernoj i tradicionalnoj kuhinji, osoblje je za svaku pohvalu,  od konobara, preko kuvara, do poslasticara"</p>
+        <p class="comment col-6 ml-auto text-justify">"Vrlo prijatan ambijent, moderan, a možete uživati i u modernoj i tradicionalnoj kuhinji, osoblje je za svaku pohvalu, od konobara, preko kuvara, do poslastičara"</p>
         <div class="reservation">
             <!--REZERVACIJA KONTAKT-->
             <div>
                 <img id="reservation" src="">Slika stolova
-                <button type="button" class="btn btn-outline-warning rounded-pill mb-2 mb-5 ">REZERVISITE</button>
+                <button type="button" class="btn btn-outline-warning rounded-pill mb-2 mb-5 ">REZERVIŠITE</button>
             </div>
         </div>
         <!--Prelaz-->
         <div>
-            <p class="comment col-6 mr-auto text-justify">"Kad god dodjem do Zrenjanina obavezno posetim ovaj restoran,  mislim da takav ambijent i kuhinja ne postoje nigde" </p>
+            <p class="comment col-6 mr-auto text-justify">"Kad god dođem do Zrenjanina obavezno posetim ovaj restoran,  mislim da takav ambijent i kuhinja ne postoje nigde" </p>
         </div>
 
         <!-- JELOVNIK SEKCIJA -->
@@ -289,7 +292,7 @@
                 Zrenjanin, Srbija<br/>
                   <b>Telefon:</b> 062/530-525<br/>
                   <b>Fax:</b> 023/510-004<br/>
-                <b>Radno vreme:</b><br/>Pon-Cet 09-01h<br/>Pet-Ned 09-03h
+                <b>Radno vreme:</b><br/>Pon-Čet 09-01h<br/>Pet-Ned 09-03h
 
               </p>
             </div>
