Datum pise slovima sad

--- a/rezervacija.html
+++ b/rezervacija.html
@@ -59,7 +59,7 @@
     </div>
     <script type="text/javascript">
     $('#datum').datepicker({
-        format: 'dd.mm.yyyy.',
+        format: 'dd. MM yyyy.',
         weekStart: 1,
         startDate: 'tomorow',
         language: 'sr-latin',
