--- a/index.html
+++ b/index.html
@@ -110,13 +110,13 @@
            </a>
          </div>
          <!--kraj slajdova-->
-           <span class="row justify-content-center pb-2 carouselbtn">
+           <span class="row pb-2 carouselbtn">
            <button type="button" class="btn btn-outline-warning rounded-pill">REZERVIŠITE</button>
            </span>
       </div>
         <!--Prelaz sa strane na stranu-->
         <!--kraj stranice o nama-->
-        <p class="comment col-6 ml-auto text-justify">"Vrlo prijatan ambijent, moderan, a možete uživati i u modernoj i tradicionalnoj kuhinji, osoblje je za svaku pohvalu, od konobara, preko kuvara, do poslastičara"</p>
+        <p class="comment col-lg-8 col-md-8 col-sm-12 col-12 ml-auto text-justify">"Vrlo prijatan ambijent, moderan, a možete uživati i u modernoj i tradicionalnoj kuhinji, osoblje je za svaku pohvalu, od konobara, preko kuvara, do poslastičara"</p>
         <div class="reservation">
             <!--REZERVACIJA KONTAKT-->
             <div>
@@ -126,7 +126,7 @@
         </div>
         <!--Prelaz-->
         <div>
-            <p class="comment col-6 mr-auto text-justify">"Kad god dođem do Zrenjanina obavezno posetim ovaj restoran,  mislim da takav ambijent i kuhinja ne postoje nigde" </p>
+            <p class="comment col-lg-8 col-md-8 col-sm-12 col-12 mr-auto text-justify">"Kad god dođem do Zrenjanina obavezno posetim ovaj restoran,  mislim da takav ambijent i kuhinja ne postoje nigde" </p>
         </div>
 
         <!-- JELOVNIK SEKCIJA -->
@@ -274,7 +274,7 @@
           </section>
 
         </div>
-        <!-- jQuery if needed -->
+        <!-- jQuery -->
             <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
             <script type="text/javascript" src="js/menu.js"></script>
           <script type="text/javascript">
@@ -286,7 +286,8 @@
           </script>
 
         <!--KONTAKT SEKCIJA-->
-        <div id="contact" class="contact">
+        <div class="row align-middle">
+        <div id="contact" class="contact col-lg-6 col-md-6 col-sm-12 col-12 ">
               <p><b>Restoran Sharage</b><br/>
                  Dr Kornela Radulovića 18<br/>
                 Zrenjanin, Srbija<br/>
@@ -296,7 +297,10 @@
 
               </p>
             </div>
-            <div></div>
+            <div>
+              <iframe class="card-img-top col-lg-6 col-md-6 col-sm-12 col-12 text-justify align-middle" src=" " frameborder="1""></iframe>
+            </div>
+          </div>
         </div>
     </div>
     <div class="social">
@@ -307,7 +311,7 @@
     </div>
         <!--FOOTER-->
         <footer class="row align-middle" >
-            <div class="col-sm-4 col-12">
+            <div class="col-sm-4 col-12 ">
                 <iframe class="card-img-top" src=" " frameborder="1"></iframe>
             </div>
             <div class="col-sm-4 col-12">
