--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
             <!--REZERVACIJA KONTAKT-->
             <div>
                 <img id="reservation" src="">Slika stolova
-                <button type="button" class="btn btn-outline-warning rounded-pill mb-2 mb-5 ">REZERVIŠITE</button>
+                <button type="button" class="btn btn-outline-warning rounded-pill ml-auto">REZERVIŠITE</button>
             </div>
         </div>
         <!--Prelaz-->
@@ -286,18 +286,19 @@
           </script>
 
         <!--KONTAKT SEKCIJA-->
-        <div class="row align-middle">
-          <div id="contact" class="contact col-lg-6 col-md-6 col-sm-12 col-12 ">
+        <div class="row">
+          <div id="contact" class="contact col-lg-6 col-md-6 col-sm-12 col-12">
               <p><b>Restoran Sharage</b><br/>
                  Dr Kornela Radulovića 18<br/>
                 Zrenjanin, Srbija<br/>
                   <b>Telefon:</b> 062/530-525<br/>
                   <b>Fax:</b> 023/510-004<br/>
-                <b>Radno vreme:</b><br/>Pon-Čet 09-01h<br/>Pet-Ned 09-03h
+                <b>Radno vreme:</b><br/>08-00h
               </p>
           </div>
-        <div>
-            <iframe class="card-img-top col-lg-6 col-md-6 col-sm-12 col-12 text-justify align-middle" id="gmap_canvas" src="https://maps.google.com/maps?q=dr%20kornela%20radulovica%2018&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe> 
+          
+        <div class=" col-lg-6 col-md-6 col-sm-12 col-12">
+            <iframe src="https://www.google.com/maps/embed?pb=!4v1552475099140!6m8!1m7!1sB8BbSYeYQ0T0k9Rg2DmEYw!2m2!1d45.37515322751355!2d20.39707133352242!3f131.18876519335683!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
           </div>
         </div>
           </div>
