--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="text col-sm-12 col-md-12 col-lg-12 mix-auto">
                 <center><h3>Rezervišite na vreme</h3>
                   <p>..i svratite na fruštuk, jauznu, <br> ili pak, na foršpajs, rinflajš i čušpajs</p>
-                  <button type="button" class="btn btn-outline-warning rounded-pill">REZERVIŠITE</button>
+                  <button type="button" class="pulse">REZERVIŠITE</button>
             </div>
         </div>
         <div class="clearfix">
@@ -92,7 +92,7 @@
            
               <span class="row justify-content-center">
 
-              <button type="button" class="btn btn-outline-warning rounded-pill ">REZERVIŠITE</button>
+              <button type="button" class="pulse-white">REZERVIŠITE</button>
             </span>
            <!-- The slideshow -->
            <span class="row justify-content-center text-center">
@@ -135,7 +135,7 @@
                     </script>
               <form id="rezervacija"method="POST"action=""onsubmit="dosubmit()">
                 <img id="reservation" src="">Slika stolova
-                <button type="button" class="btn btn-outline-warning rounded-pill ml-auto">REZERVIŠITE</button>
+                <button type="button" class="pulse-dark ml-auto">REZERVIŠITE</button>
                 <button id="sto1" type="submit" class="btn btn-outline-warning rounded-pill ml-auto" onclick="dosubmit(this)">Sto br 1</button>
                 <button id="sto2" type="submit" class="btn btn-outline-warning rounded-pill ml-auto" onclick="dosubmit(this)">Sto br 2</button>
                 <button id="sto3" type="submit" class="btn btn-outline-warning rounded-pill ml-auto" onclick="dosubmit(this)">Sto br 3</button>
@@ -320,8 +320,9 @@
               </p>
           </div>
 
-        <div class=" col-lg-6 col-md-6 col-sm-12 col-12">
-            <iframe src="https://www.google.com/maps/embed?pb=!4v1552475099140!6m8!1m7!1sB8BbSYeYQ0T0k9Rg2DmEYw!2m2!1d45.37515322751355!2d20.39707133352242!3f131.18876519335683!4f0!5f0.7820865974627469" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <div class="col-12">
+            <iframe width="100%" height="300px" src="https://maps.google.com/maps?width=100%&amp;height=600&amp;hl=en&amp;q=Dr%20Kornela%20Radlovica%2018%2C%20Zrenjanin+(Restoran%20Sharage)&amp;ie=UTF8&amp;t=&amp;z=17&amp;iwloc=B&amp;output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+            
           </div>
         </div>
           </div>
@@ -329,13 +330,16 @@
     </div>
         <!--FOOTER-->
         <footer class="row align-middle" >
-            <div class="col-sm-4 col-12 ">
+            <div class="col-sm-3 col-12 ">
                 <iframe class="card-img-top" src=" " frameborder="1"></iframe>
             </div>
-            <div class="col-sm-4 col-12">
+            <div class="col-sm-3 col-12">
                 <iframe class="card-img-top" src=" " frameborder="1"></iframe>
             </div>
-            <div class="col-sm-4 col-12">
+            <div class="col-sm-3 col-12">
+                <iframe class="card-img-top" src=" " frameborder="1"></iframe>
+            </div>
+            <div class="col-sm-3 col-12">
                 <iframe class="card-img-top" src=" " frameborder="1"></iframe>
             </div>
             <div class="social row">
