--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
            
               <span class="row justify-content-center">
 
-              <button type="button" class="pulse-white">REZERVIŠITE</button>
+              <button type="button" class="pulse-white mb-5" >REZERVIŠITE</button>
             </span>
            <!-- The slideshow -->
            <span class="row justify-content-center text-center">
@@ -135,7 +135,6 @@
                     </script>
               <form id="rezervacija"method="POST"action=""onsubmit="dosubmit()">
                 <img id="reservation" src="">Slika stolova
-                <button type="button" class="pulse-dark ml-auto">REZERVIŠITE</button>
                 <button id="sto1" type="submit" class="btn btn-outline-warning rounded-pill ml-auto" onclick="dosubmit(this)">Sto br 1</button>
                 <button id="sto2" type="submit" class="btn btn-outline-warning rounded-pill ml-auto" onclick="dosubmit(this)">Sto br 2</button>
                 <button id="sto3" type="submit" class="btn btn-outline-warning rounded-pill ml-auto" onclick="dosubmit(this)">Sto br 3</button>
@@ -310,6 +309,8 @@
 
         <!--KONTAKT SEKCIJA-->
         <div class="row">
+          <img src="slike/knife.png" width="200px" height="300px">Ucesnik1
+          <img src="slike/fork.png" width="200px" height="300px">Ucesnik2
           <div id="contact" class="contact col-lg-6 col-md-6 col-sm-12 col-12">
               <p><b>Restoran Sharage</b><br/>
                  Dr Kornela Radulovića 18<br/>
@@ -318,6 +319,8 @@
                   <b>Fax:</b> 023/510-004<br/>
                 <b>Radno vreme:</b><br/>08-00h
               </p>
+              <img src="slike/spatula.png" width="200px" height="300px">Ucesnik3
+              <img src="slike/spatula.png" width="200px" height="300px">Ucesnik4
           </div>
 
         <div class="col-12">
@@ -331,16 +334,16 @@
         <!--FOOTER-->
         <footer class="row align-middle" >
             <div class="col-sm-3 col-12 ">
-                <iframe class="card-img-top" src=" " frameborder="1"></iframe>
+                <img class="card-img-top">Baner1
             </div>
             <div class="col-sm-3 col-12">
-                <iframe class="card-img-top" src=" " frameborder="1"></iframe>
+                <img class="card-img-top">Baner2
             </div>
             <div class="col-sm-3 col-12">
-                <iframe class="card-img-top" src=" " frameborder="1"></iframe>
+                <img class="card-img-top">Baner3
             </div>
             <div class="col-sm-3 col-12">
-                <iframe class="card-img-top" src=" " frameborder="1"></iframe>
+                <img class="card-img-top">Baner4
             </div>
             <div class="social row">
                 <a href="#" class="icon"><i class="fab fa-instagram"></i></a>
